Added MD5 retry to downloadsV2
Signed-off-by: Jasper Potts <1466205+jasperpotts@users.noreply.github.com>